--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
-  font-family: 'Nunito Sans';
+  font-family: 'Roboto';
   box-sizing: border-box;
 }
 
 body {
   margin: 0 auto;
   padding: 3px;
-  background-color: #fff;
+  background: rgb(237,237,237);
+  background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(219,219,219,1) 50%, rgba(241,241,241,1) 100%);
 }
 
 .game-container {
@@ -17,20 +18,29 @@ body {
 
 header {
   display: flex;
-  justify-content: center
+  justify-content: center;
+}
+
+h1 {
+  font-size: 60px;
+  background: -webkit-linear-gradient(#58a5ff, #a900f6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 0px;
 }
 
 .rounds {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .round-label {
-  font-size: 30px;
-  font-weight: 700;
-  margin-bottom: 0px;
+  font-size: 40px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 .guess {
@@ -40,13 +50,15 @@ header {
   flex-direction: column;
   align-items: center;
   padding: 19px;
+  border-radius: 25px;
 }
 
 .guessing-area {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .guess-title {
@@ -58,14 +70,19 @@ header {
 }
 
 .guess-label {
-  font-size: 18px;
-  font-weight: 700;
+  font-size: 24px;
+  font-weight: 900;
   margin: 0;
+  margin-bottom: 5px;
 }
 
 .score-label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
+  color: #a900f6;
+  background: #fff;
+  padding: 5px 10px;
+  border-radius: 10px;
   margin: 0;
 }
 
@@ -87,13 +104,16 @@ header {
 }
 
 .human-guess {
-  border: 1px solid #979797;
+  border: 1px solid #a900f6;
+  background-color: #ececec;
 }
 
 .guess input {
   height: 90px;
   width: 90px;
   font-size: 30px;
+  border: 1px solid #a900f6;
+  border-radius: 10px;
   text-align: center;
   margin: 0 auto;
   margin-bottom: 7px;
@@ -105,13 +125,13 @@ header {
 }
 
 .number-control {
-  border: solid 1px #4c7ef3;
+  border: solid 1px #a900f6;
   display: inline-block;
   width: 45px;
   height: 35px;
   font-size: 24px;
   font-weight: 700;
-  color: #4c7ef3;
+  color: #a900f6;
   cursor: pointer;
 }
 
@@ -137,9 +157,10 @@ header {
 }
 
 .button {
-  background-color: #4c7ef3;
+  background: -webkit-linear-gradient(#58a5ff, #a900f6);
   color: #fff;
   cursor: pointer;
+  border-radius: 25px;
 }
 
 #guess {
@@ -147,8 +168,8 @@ header {
   width: 169px;
   height: 59px;
   border: none;
-  font-weight: 700;
-  font-size: 14px;
+  font-weight: 400;
+  font-size: 17px;
 }
 
 input[type=number]::-webkit-inner-spin-button {
@@ -156,15 +177,17 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 #next-round {
+  background: #000;
   width: 179px;
   height: 64px;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 19px;
+  font-weight: 400;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
+  border: none;
 }
-  
+
 .button[disabled] {
   background-color: #d2d2d2;
   color: #a0a0a0;
@@ -172,14 +195,14 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .instructions {
-  background-color: #ececec;
   width: 100%;
   display: flex;
   justify-content: space-around;
+  padding-bottom: 5px;
 }
 
 .instruction {
-  width: 180px;
+  width: 350px;
   padding: 2px;
   text-align: center;
 }
@@ -190,6 +213,6 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 .winning-text, .winning-text[disabled] {
-  color: #ec3636;
-  font-weight: 700;
+  color: #000;
+  font-weight: 400;
 }
