--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
-    /*box-shadow: 0 0 25px -15px black;*/
     border-bottom: 1px solid rgb(155, 216, 240);
     box-shadow: 0 0 25px -12px rgb(155, 216, 240);
 }
@@ -45,11 +44,12 @@ header li {
 
 header li a {
     font-size: 20px;
+    font-weight: bold;
     color: black;
     text-decoration: none;
     background-color: whitesmoke;
     padding: 3px;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px;
 }
 
@@ -118,18 +118,26 @@ aside {
 }
 
 label.copier {
-    background: rgb(82, 255, 96);
+    /*background: rgb(82, 255, 96);*/
     border-radius: 50%;
-    padding: 0px 5px 3px 5px;
-    font-size: 10px;
-    font-weight: bold;
+    padding: 5px 3px 4px 5px;
+    /*font-size: 10px;
+    font-weight: bold;*/
     text-align: center;
     cursor: pointer;
-  }
+}
+
+label.copier::before {
+    content: "\01F35F";
+}
 
 label.copier:hover {
     color: whitesmoke;
-    background: rgb(186, 82, 255);
+    /*background: rgb(186, 82, 255);*/
+}
+
+label.copier:hover::before {
+    content: "\01F35F \01F35F";
 }
 
 label textarea {
