--- a/styles.css
+++ b/styles.css
@@ -131,10 +131,10 @@ label.copier::before {
     content: "\01F35F";
 }
 
-label.copier:hover {
+/*label.copier:hover {
     color: whitesmoke;
-    /*background: rgb(186, 82, 255);*/
-}
+    background: rgb(186, 82, 255);
+}*/
 
 label.copier:hover::before {
     content: "\01F35F \01F35F";
