--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,8 @@ version: 0.2
 
 body {
     background: rgb(176, 228, 248);
-    /*background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(219,219,219,1) 50%, rgba(241,241,241,1) 100%);*/
     font-family: Helvetica, sans-serif;
-    color: black;
+    color: rgb(37, 37, 37);
     height: 125vh;
     margin-top: 80px;
     padding: 30px;
@@ -30,8 +29,7 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgb(155, 216, 240);
-    box-shadow: 0 0 25px -12px rgb(155, 216, 240);
+    box-shadow: 0 0 25px -12px rgba(37, 37, 37, 0.3);
 }
 
 header * {
@@ -54,9 +52,12 @@ header li a {
 }
 
 header li a:hover {
-    color: whitesmoke;
-    background-color: black;
-  }
+    /*color: whitesmoke;
+    background-color: rgb(37, 37, 37);*/
+    background: -webkit-linear-gradient(#58a5ff, #a900f6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 header main {
     margin-left: 36px;
@@ -67,16 +68,11 @@ header main {
 h1 {
     font-size: 40px;
     font-weight: bold;
-    /*background: -webkit-linear-gradient(#58a5ff, #a900f6);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;*/
 }
 
-h2, aside {
+h2 {
     font-size: 17px;
-    /*background-color: rebeccapurple;*/
-    background-color: rgb(0, 60, 150);
-    color: whitesmoke;
+    background-color: rgb(151, 149, 247);
     padding: 20px 50px;
 }
 
@@ -88,14 +84,15 @@ h2 {
 }
 
 aside {
-    /*box-shadow: 0px 0px 3px 0px rgba(102, 51, 153, 0.733);*/
-    box-shadow: 0px 0px 5px 0px rgba(0, 60, 150, 0.733);
+    background-color: rgb(245, 247, 149);
+    font-size: 17px;
+    padding: 20px 50px;
+    box-shadow: 0px 0px 5px 0px rgba(245, 247, 149, 0.733);
     margin: 40px 2px 70px 2px;
 }
 
 .code, .code-inline, label {
-    /*color: rgb(86, 24, 148);*/
-    color: rgb(0, 60, 150);
+    color: rgb(37, 37, 37);
 }
 
 .code {
@@ -114,15 +111,11 @@ aside {
     font-family: monospace;
     font-weight: 500;
     font-size: 16px;
-    box-shadow: inset 0px 0px 2px 0px rgb(155, 216, 240);
 }
 
 label.copier {
-    /*background: rgb(82, 255, 96);*/
     border-radius: 50%;
     padding: 5px 3px 4px 5px;
-    /*font-size: 10px;
-    font-weight: bold;*/
     text-align: center;
     cursor: pointer;
 }
@@ -131,12 +124,7 @@ label.copier::before {
     content: "\01F35F";
 }
 
-/*label.copier:hover {
-    color: whitesmoke;
-    background: rgb(186, 82, 255);
-}*/
-
-label.copier:hover::before {
+label.copier:active::before {
     content: "\01F35F \01F35F";
 }
 
@@ -162,7 +150,6 @@ thead td {
 }
 
 tbody tr:nth-child(even) {
-    /*background-color: rgb(194, 125, 194);*/
     background-color: rgb(155, 216, 240);
 }
 
@@ -191,18 +178,31 @@ tfoot td {
 }
 
 a.aside-link {
-    color: whitesmoke;
+    color: rgb(37, 37, 37);
     padding: 3px;
-    border: 1px solid whitesmoke;
+    border: 1px solid rgb(37, 37, 37);
     border-radius: 5px;
     text-decoration: none;
 }
 
 a.aside-link:hover {
-    color: rgb(0, 60, 150);
-    background-color: whitesmoke;
-    border: 1px solid whitesmoke;
+    color: rgb(245, 247, 149);
+    background-color: black;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 3px;
     text-decoration: none;
+}
+
+footer {
+    display: block;
+    margin: 0px -2000px;
+    padding: 0px 2000px;
+    background-color: rgb(37, 37, 37);
+    color: whitesmoke;
+    height: 200px;
+}
+
+footer img {
+    padding: 0px 20px 0px 50px;
 }
