--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -1,2 +1,18 @@
 @charset "UTF-8";
 
+pre {
+    width: 400px;
+    overflow:hidden;
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#display {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 50px 100px;
+}
+
