--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -1,18 +1,50 @@
 @charset "UTF-8";
 
+/*
 pre {
     width: 400px;
-    overflow:hidden;
+    overflow: scroll;
+}
+*/
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    margin-top: 50px;
 }
 
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 auto;
-    width: 100%;
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-weight: 400;
+    font-size: 32px;
+    margin: 20px 20px;
+}
+
+#drip {
+    background-color: black;
+    color: white;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 2px 14px;
+    font-weight: 400;
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin: 20px 20px;
+}
+
+#drip:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
 
 #display {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 50px 100px;
+    line-height: 1.3;
+    margin: 30px 20%;
 }
 
