--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -49,6 +49,12 @@ h1 {
     border: 2px solid black;
 }
 
+#drip:active {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+}
+
 #display {
     line-height: 1.3;
     margin: 30px 20%;
