Add fade-in animation styling

--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -60,3 +60,17 @@ h1 {
     margin: 30px 20%;
 }
 
+.fade-in {
+	animation: fadeIn 2s;
+  	opacity: 1;
+}
+
+@keyframes fadeIn {
+  from {
+  	opacity: 0;
+  }
+  to {
+ 	opacity: 1;
+  }
+}
+
