--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -67,3 +67,14 @@ h1 {
   }
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer img {
+    margin: 20px;
+    width: 50px;
+    height: 50px;
+}
