--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -27,25 +27,26 @@ h1 {
 #drip {
     background-color: black;
     color: white;
-    border: 2px solid black;
+    border: none;
     border-radius: 20px;
-    padding: 2px 14px;
+    padding: 4px 16px;
     font-weight: 400;
     font-size: 30px;
     letter-spacing: 1px;
     margin: 20px 20px;
+    transition: 1s box-shadow;
 }
 
 #drip:hover {
     background-color: white;
     color: black;
-    border: 2px solid black;
+    box-shadow: 0 5px 35px 0px rgba(37, 25, 25, 0.15);
+    cursor: pointer;
 }
 
 #drip:active {
     background-color: white;
     color: black;
-    border: 2px solid black;
 }
 
 #display {
