--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -22,17 +22,13 @@ header {
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    min-height: 100%;
 }
 
 h1 {
     font-weight: 400;
     font-size: 32px;
     margin: 20px 30px;
-}
-
-.fade-in {
-	animation: fadeIn 1s;
-  	opacity: 1;
 }
 
 @keyframes fadeIn {
@@ -44,16 +40,21 @@ h1 {
     }
 }
 
-@-webkit-keyframes in {
-    from   {
+.fade-in {
+	animation: fadeIn 1s;
+  	opacity: 1;
+}
+
+@keyframes in {
+    0%   {
         -webkit-transform: rotate(0deg);
     }
-    to {
+    100% {
         -webkit-transform: rotate(360deg);
     }
 }
 
-@-webkit-keyframes out {
+@keyframes out {
     0%   {
         -webkit-transform: rotate(360deg);
     }
@@ -62,10 +63,27 @@ h1 {
     }
 }
 
+@keyframes click {
+    0%   {
+        -webkit-transform: scale(1);
+    }
+    100% {
+        -webkit-transform: scale(0.962);
+    }
+}
+
+/*@keyframes hover {
+    0%   {
+        -webkit-transform: scale(1.032);
+    }
+    100% {
+        -webkit-transform: scale(1);
+    }
+}*/
+
 #drip {
-    /*background-color: black;*/
     background: rgb(63,199,251);
-    background: radial-gradient(circle, rgba(222,70,252,1) 0%, rgba(63,199,251) 70%);
+    background: radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgba(63, 199, 251) 68%);
     color: white;
     border: none;
     border-radius: 50%;
@@ -79,24 +97,23 @@ h1 {
     line-height: 3vw;
     letter-spacing: 1px;
     margin: 20px 20px;
-    transition: 1s box-shadow;
     -webkit-animation: in 0.5s;
+    animation: in 0.5s;
+    /*transition: 0.5s box-shadow;*/
 }
 
 #drip:hover {
-    /*background-color: white;
-    color: black;*/
-    box-shadow: 0 5px 35px 0px rgba(37, 25, 25, 0.15);
+    /*box-shadow: 0 5px 35px 0px rgba(63, 199, 251, 0.5);
+    box-shadow: 0 5px 35px 0px rgba(37, 25, 25, 0.15);*/
     cursor: pointer;
     -webkit-animation: out 0.5s;
+    animation: out 0.5s;
 }
 
-/*
 #drip:active {
-    background-color: white;
-    color: black;
+    -webkit-animation: click 0.18s;
+    animation: click 0.18s;
 }
-*/
 
 #display {
     line-height: 1.3;
@@ -114,8 +131,10 @@ footer img {
     width: 50px;
     height: 50px;
     -webkit-animation: in 0.5s;
+    animation: in 0.5s;
 }
 
 footer img:hover {
     -webkit-animation: out 0.5s;
+    animation: out 0.5s;
 }
