--- a/style.css
+++ b/style.css
@@ -8,12 +8,16 @@
 
 html {
     min-height: 100%;
+    /*
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
+    */
+    background: rgb(190,255,221);
+    background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(160,221,217,1) 60%);
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     font-size: 17px;
 }
 
@@ -29,6 +33,22 @@ h1 {
     font-weight: 400;
     font-size: 32px;
     margin: 20px 30px;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color:azure;
+    background-color: black;
+    width: 20%;
+    margin: 20px auto;
+    text-align: center;
+    padding: 5px;
+    border-radius: 2px;
+}
+
+a:hover {
+    font-style: italic;
 }
 
 @keyframes fadeIn {
