--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@
 
 html {
     min-height: 100%;
-    /*
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
-    */
     background: rgb(190,255,221);
     background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(160,221,217,1) 60%);
 }
@@ -38,12 +34,12 @@ h1 {
 a {
     display: block;
     text-decoration: none;
-    color:azure;
+    color: azure;
     background-color: black;
     width: 20%;
-    margin: 20px auto;
+    margin: 40px auto 20px auto;
     text-align: center;
-    padding: 5px;
+    padding: 10px 5px;
     border-radius: 2px;
 }
 
@@ -65,9 +61,11 @@ a:hover {
   	opacity: 1;
 }
 
-#display {
+#about {
     line-height: 1.3;
-    margin: 30px 20%;
+    width: 40%;
+    text-align: justify;
+    margin: 20px auto;
 }
 
 footer {
