--- a/style.css
+++ b/style.css
@@ -33,14 +33,15 @@ h1 {
 }
 
 a {
-    display: block;
+    display: inline-block;
     text-decoration: none;
     color: azure;
     background-color: black;
-    width: 20%;
-    margin: 40px auto 20px auto;
+    margin: 20px;
+    min-width: 20%;
+    clear: both;
     text-align: center;
-    padding: 10px 5px;
+    padding: 4px 4px;
     border-radius: 2px;
 }
 
@@ -67,6 +68,13 @@ a:hover {
     width: 40%;
     text-align: justify;
     margin: 20px auto;
+}
+
+#project-links {
+    width: 80%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content:space-evenly;
 }
 
 footer {
