Link styling update

--- a/style.css
+++ b/style.css
@@ -38,10 +38,8 @@ a {
     color: azure;
     background-color: black;
     margin: 20px;
-    min-width: 20%;
-    clear: both;
     text-align: center;
-    padding: 4px 0 4px 12px;
+    padding: 4px 4px 4px 12px;
     border-radius: 2px;
 }
 
@@ -68,16 +66,15 @@ a:hover {
 .back {
     display: inline-block;
     position: absolute;
-    top: 25px;
+    top: 35px;
     left:50px;
     margin: 0;
-    padding: 2px;
-    min-width: 10%;
+    padding: 0 3px 0 6px;
 }
 
 .emoji {
     font-size: 26px;
-    margin: 0 2px;
+    padding: 0 0 0 3px;
 }
 
 #about {
