--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -125,6 +125,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px 50px 0px;
 }
 
 footer img {
