--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -10,11 +10,11 @@ html {
     min-height: 100%;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
+    font-size: 17px;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
 }
 
 header {
@@ -112,6 +112,7 @@ h1 {
 }
 
 #display {
+    font-size: clamp(1rem, 1.3rem, calc(1rem + 1vw));
     line-height: 1.3;
     letter-spacing: 0.22px;
     margin: 30px 20%;
