--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -10,7 +10,7 @@ html {
     height: 100%;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
-    font-size: 17px;
+    font-size: 20px;
 }
 
 body {
@@ -92,9 +92,9 @@ h1 {
     align-items: center;
     width: 60px;
     height: 60px;
-    padding: 39px 39px 39px 40px;
+    padding: 50px;
     letter-spacing: 1px;
-    margin: 20px 20px;
+    margin: 20px;
     /*-webkit-animation: in 0.5s;
     animation: in 0.5s;*/
 }
@@ -126,13 +126,12 @@ h1 {
   
 @media (min-width: 1001px){
     #display {
-        font-size: 1.5rem;
+        font-size: 1.48rem;
         margin: 30px 20%;
     }
 }
 
 #display {
-    /*font-size: clamp(1rem, 1.3rem, calc(1rem + 1vw));*/
     line-height: 1.3;
     letter-spacing: 0.22px;
 }
@@ -141,13 +140,12 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 0px 50px 0px;
 }
 
 footer img {
-    margin: 30px;
-    width: 60px;
-    height: 60px;
+    margin: 40px;
+    width: 70px;
+    height: 70px;
     -webkit-animation: in 0.5s;
     animation: in 0.5s;
 }
