--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -21,7 +21,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 80px;
     margin-bottom: 80px;
 }
 
@@ -138,8 +138,7 @@ footer {
 }
 
 footer img {
-    margin: 40px;
-    margin-bottom: 100px;
+    margin: 80px 40px 140px;
     width: calc(80px + 1vw);
     height: calc(80px + 1vw);
     -webkit-animation: in 0.5s;
