--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -127,6 +127,10 @@ h1 {
 #display {
     line-height: 1.3;
     letter-spacing: 0.22px;
+    border: 5px solid #000;
+    border-radius: 10px;
+    padding: 5%;
+    background-color: rgb(233, 233, 233);
 }
 
 footer {
