--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -10,7 +10,7 @@ html {
     height: 100%;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
-    font-size: 30px;
+    font-size: 24px;
 }
 
 body {
@@ -21,14 +21,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: calc(50px + 2vw);
+    margin-bottom: calc(15px + 2vw);
 }
 
 h1 {
     font-weight: 400;
     font-size: calc(1.9rem + 1vw);
-    margin: 20px calc(15px + 1vw);;
+    margin: 20px calc(10px + 2vw);
 }
 
 @keyframes fadeIn {
@@ -68,7 +68,7 @@ h1 {
         -webkit-transform: scale(1);
     }
     100% {
-        -webkit-transform: scale(0.962);
+        -webkit-transform: scale(0.964);
     }
 }
 
@@ -112,7 +112,7 @@ h1 {
 
 @media (min-width: 0px) {
     #display {
-        font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
+        font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
         margin: 30px 10%;
     }
 }
@@ -127,10 +127,17 @@ h1 {
 #display {
     line-height: 1.3;
     letter-spacing: 0.22px;
-    border: 5px solid #000;
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 10px;
     padding: 5%;
     background-color: rgb(233, 233, 233);
+}
+
+#darr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0px;
 }
 
 footer {
