--- a/style.css
+++ b/style.css
@@ -10,44 +10,62 @@ html {
     min-height: 100%;
     background: rgb(190,255,221);
     background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(160,221,217,1) 60%);
+    font-size: 16px;
 }
 
 body {
-    font-family: 'Fira Code', monospace;
-    font-size: 17px;
-    letter-spacing: 3px;
+    font-family: 'Zen Old Mincho', serif;
+    letter-spacing: 1px;
 }
 
 header {
+    font-family: Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    min-height: 100%;
-}
-
-h1 {
-    font-weight: 400;
-    font-size: 32px;
-    margin: 20px 30px;
 }
 
 a {
-    display: inline-block;
+    flex: 0 1 auto;
     text-decoration: none;
+    font-size: clamp(1rem, calc(1rem + 1vw), 1.4rem);
+    font-weight: 900;
     color: azure;
     background-color: black;
     margin: 20px;
     text-align: center;
-    padding: 4px 4px 4px 12px;
-    border-radius: 2px;
+    padding: 2px 4px 4px 9px;
+    border-radius: 4px;
+    letter-spacing: 2px;
 }
 
 a:hover {
     font-style: italic;
 }
 
+a.button {
+    flex: 0 0 0;
+    font-family: Helvetica, sans-serif;
+    font-size: clamp(1rem, calc(1rem + 1vw), 1.4rem);
+    font-weight: 500;
+    text-decoration: none;
+    color:#000;
+    background: none;
+    margin: 20px;
+    text-align: center;
+    padding: 4px 4px 3px 6px;
+    border: 2px solid #000;
+    border-radius: 4px;
+}
 
+#project-links {
+    padding: 20px;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
 @keyframes fadeIn {
     from {
@@ -63,49 +81,20 @@ a:hover {
   	opacity: 1;
 }
 
-.back {
-    display: inline-block;
-    position: absolute;
-    top: 35px;
-    left:50px;
-    margin: 0;
-    padding: 0 3px 0 6px;
-}
-
 .emoji {
     font-size: 26px;
     padding: 0 0 0 3px;
 }
 
 #about {
-    line-height: 1.3;
-    width: 40%;
+    padding: 20px;
+    font-size: 1.8rem;
     text-align: justify;
-    margin: 20px auto;
-}
-
-#project-links {
-    width: 80%;
-    margin: 0 auto;
-    align-items: center;
-    justify-content:space-evenly;
+    margin: 50px 20px 0px 20px;
 }
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-footer img {
-    margin: 30px;
-    width: 50px;
-    height: 50px;
-    -webkit-animation: in 0.5s;
-    animation: in 0.5s;
-}
-
-footer img:hover {
-    -webkit-animation: out 0.5s;
-    animation: out 0.5s;
 }
