--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ html {
     background: rgb(190,255,221);
     background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(160,221,217,1) 60%);
     font-size: 16px;
+    color: rgb(20, 20, 20);
 }
 
 body {
-    font-family: 'Zen Old Mincho', serif;
+    font-family: Helvetica, sans-serif;
     letter-spacing: 1px;
 }
 
 header {
-    font-family: Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,15 +28,15 @@ header {
 a {
     flex: 0 1 auto;
     text-decoration: none;
-    font-size: clamp(1rem, calc(1rem + 1vw), 1.4rem);
-    font-weight: 900;
-    color: azure;
-    background-color: black;
+    text-transform: lowercase;
+    font-weight: 200;
+    font-size: clamp(1rem, calc(1rem + 1vw), 1.2rem);
+    color: rgb(198, 245, 242);
+    background: rgb(20,20,20);
     margin: 20px;
     text-align: center;
     padding: 2px 4px 4px 9px;
     border-radius: 4px;
-    letter-spacing: 2px;
 }
 
 a:hover {
@@ -45,16 +45,15 @@ a:hover {
 
 a.button {
     flex: 0 0 0;
-    font-family: Helvetica, sans-serif;
     font-size: clamp(1rem, calc(1rem + 1vw), 1.4rem);
     font-weight: 500;
     text-decoration: none;
-    color:#000;
+    color: rgb(20,20,20);
     background: none;
     margin: 20px;
     text-align: center;
     padding: 4px 4px 3px 6px;
-    border: 2px solid #000;
+    border: 2px solid rgb(20,20,20);
     border-radius: 4px;
 }
 
