--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -8,8 +8,7 @@
 
 html {
     height: 100%;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 50%, rgba(255,255,255,1) 100%);
+    background: rgb(63, 201, 255);
     font-size: 24px;
 }
 
@@ -21,7 +20,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: calc(50px + 2vw);
+    margin-top: calc(40px + 2vw);
     margin-bottom: calc(15px + 2vw);
 }
 
@@ -82,9 +81,10 @@ h1 {
 }
 
 #drip {
-    background: rgb(63,199,251);
-    background: radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgba(63, 199, 251) 68%);
-    color: white;
+    background: rgb(255,255,255);
+    /*background: radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgba(63, 199, 251) 68%);*/
+    background: radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
+    color: #000;
     border: none;
     border-radius: 50%;
     font-size: calc(1.9rem + 1vw);
@@ -127,13 +127,14 @@ h1 {
 #display {
     line-height: 1.3;
     letter-spacing: 0.22px;
-    border: 5px solid rgb(0, 0, 0);
+    border: none;
     border-radius: 10px;
     padding: 5%;
-    background-color: rgb(233, 233, 233);
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
 }
 
-#darr {
+#seperator {
     display: flex;
     align-items: center;
     justify-content: center;
