--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html {
     background: rgb(190,255,221);
     background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(160,221,217,1) 60%);
     font-size: 16px;
-    color: rgb(20, 20, 20);
 }
 
 body {
@@ -23,20 +22,19 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 a {
-    flex: 0 1 auto;
+    flex: auto;
     text-decoration: none;
-    text-transform: lowercase;
-    font-weight: 200;
-    font-size: clamp(1rem, calc(1rem + 1vw), 1.2rem);
-    color: rgb(198, 245, 242);
-    background: rgb(20,20,20);
-    margin: 20px;
-    text-align: center;
-    padding: 2px 4px 4px 9px;
+    color: azure;
+    background-color: #000;
+    padding: 4px;
     border-radius: 4px;
+    letter-spacing: 2px;
+    margin: 20px 20px;
+    text-align: center;
 }
 
 a:hover {
@@ -46,25 +44,39 @@ a:hover {
 a.button {
     flex: 0 0 0;
     font-size: clamp(1rem, calc(1rem + 1vw), 1.4rem);
-    font-weight: 500;
     text-decoration: none;
-    color: rgb(20,20,20);
+    color:#000;
     background: none;
     margin: 20px;
     text-align: center;
     padding: 4px 4px 3px 6px;
-    border: 2px solid rgb(20,20,20);
+    border: 2px solid #000;
     border-radius: 4px;
 }
 
-#project-links {
-    padding: 20px;
+@media (min-width: 0px) {
+    body {
+        font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
+        margin: 30px 10%;
+    }
+}
+  
+@media (min-width: 1150px){
+    body {
+        font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
+        margin: 30px 16%;
+    }
+}
+
+#links {
+    text-transform: lowercase;
+    padding: 20px 20px;
     height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-}
+  }
 
 @keyframes fadeIn {
     from {
@@ -83,13 +95,6 @@ a.button {
 .emoji {
     font-size: 26px;
     padding: 0 0 0 3px;
-}
-
-#about {
-    padding: 20px;
-    font-size: 1.8rem;
-    text-align: justify;
-    margin: 50px 20px 0px 20px;
 }
 
 footer {
