--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -21,6 +21,19 @@ html {
     font-size: 24px;
 }
 
+.emphasis {
+    font-style: italic;
+    /*
+    background: rgba(222, 70, 252, 1);
+    background: radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgb(63, 144, 251) 68%);
+    background: -webkit-radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgb(63, 144, 251) 68%);
+    background: -moz-radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgb(63, 144, 251) 68%);
+    background: -o-radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgba(63, 199, 251), 1 68%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    */
+}
+
 /**
     Animations & associated classes.
     **/
@@ -94,8 +107,7 @@ h1 {
 }
     
 #drip {
-    background: rgb(255,255,255);
-    /*background: radial-gradient(circle, rgba(222, 70, 252, 1) 0%, rgba(63, 199, 251) 68%);*/
+    background: rgba(255, 168, 97, 1);
     background: radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
     background: -webkit-radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
     background: -moz-radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
@@ -127,6 +139,10 @@ h1 {
     animation: click 0.18s ease-in-out;
 }
 
+#index {
+    text-decoration: none;
+}
+
 /**
     Message container.
     **/
@@ -150,7 +166,7 @@ h1 {
     letter-spacing: 0.22px;
     border: none;
     border-radius: 10px;
-    padding: 5%;
+    padding: 5% 6%;
     background: rgba(255, 168, 97, 1);
     background: radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
     background: -webkit-radial-gradient(circle, rgba(255, 168, 97, 1) 0%, rgba(255, 232, 101, 1) 68%);
@@ -176,6 +192,11 @@ footer {
     align-items: center;
 }
 
+#links {
+    display: flex;
+    flex-direction: row;
+}
+
 footer img {
     margin: calc(40px + 2vw) auto;
     width: calc(80px + 1vw);
@@ -194,7 +215,7 @@ footer a {
     color: #000;
     font-size: 1rem;
     letter-spacing: 1px;
-    margin: 0 auto calc(40px + 2vw);
+    margin: 0 12px calc(40px + 2vw);
     position: relative;
     padding-bottom: 2px;
 }
