--- a/voting/style.css
+++ b/voting/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: 'Fira Code', monospace;
-  font-size: 20px;
+  font-size: 18px;
   box-sizing: border-box;
 }
 
@@ -12,12 +12,11 @@ body {
   margin: 0 auto;
   padding: 3px;
   background: rgb(237,237,237);
-  background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(219,219,219,1) 50%, rgba(241,241,241,1) 100%);
+  background: linear-gradient(180deg, rgb(240, 240, 240) 0%, rgb(234, 234, 234) 50%, rgba(241,241,241,1) 100%);
 }
 
-.game-container {
-  /*max-width: 640px;*/
-  margin: 0 auto;
+.container {
+  margin: 0;
   min-height: 100vh;
   text-align: center;
 }
@@ -34,96 +33,121 @@ h1 {
   /*background: -webkit-linear-gradient(#58a5ff, #a900f6);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;*/
-  margin-bottom: 0px;
+  margin: 50px 0 20px;
 }
 
 .rounds {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 0px;
+  margin: 20px auto;
 }
 
 .round-label {
   font-size: 20px;
   font-weight: 400;
-  margin-bottom: 10px;
-  margin-top: 30px;
+  margin: 0 auto 10px;
 }
 
-.guessing-area {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  margin-bottom: 20px;
-  margin-top: 20px;
+.outline {
+  border: 1px solid rgb(127, 197, 255);
+  border-radius: 25px;
+  padding: 6px 12px;
 }
 
-.guess {
-  min-width: 200px;
-  max-width: 300px;
-  height: 328px;
+.voting-area {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 20px auto 100px;
+  gap: 20px;
+}
+
+.option-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+  padding: 20px;
+  background: rgb(237,237,237);
+  border: 1px solid rgb(127, 197, 255);
+  border-radius: 25px;
+}
+
+.stats-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+  padding: 20px;
+  gap: 20px;
+  background: rgb(237,237,237);
+  border: 1px solid rgb(127, 197, 255);
+  border-radius: 25px;
+}
+
+.value-options {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
   align-items: center;
   padding: 19px;
   border-radius: 25px;
 }
 
-.guess-title {
+.card-title {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 20px;
+  margin: 0;
 }
 
-.guess-label {
+.card-label {
   font-family: Helvetica, sans-serif;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 900;
   letter-spacing: 1px;
-  margin: 0;
-  margin-bottom: 5px;
+  margin: 0 0 10px;
 }
 
-.score-label {
-  display: none;
-  font-size: 16px;
-  font-weight: 700;
-  color: #a900f6;
-  background: #fff;
-  padding: 5px 10px;
-  border-radius: 10px;
-  margin: 0;
+.option-card {
+  background-color: rgb(230, 230, 230);
+  height: auto;
 }
 
-.target-guess {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.stats-card {
+  background-color: rgb(230, 230, 230);
+  width: 320px;
+  height: 360px;
+  align-content: left;
+}
+
+.history-card {
+  background-color: rgb(230, 230, 230);
+  width: 320px;
+  height: 360px;
   justify-content: flex-start;
 }
 
-.computer-guess {
-  background-color: #ececec;
-}
-
-.human-guess {
-  border: 1px solid #006ff6;
-  background-color: #ececec;
-}
-
-.guess input {
-  height: 90px;
+.card input {
+  background: rgb(250, 250, 250);
+  height: 60px;
   width: 90px;
   font-size: 20px;
-  border: 1px solid #006ff6;
+  border: 1px solid #000000;
   border-radius: 10px;
   text-align: center;
-  margin: 0 auto;
-  margin-bottom: 7px;
+  margin: 20px auto;
 }
 
 .number-controls {
@@ -132,29 +156,30 @@ h1 {
 }
 
 .number-control {
-  border: 1px solid #006ff6;
+  border: 1px solid #000000;
+  background: rgb(250, 250, 250);
   display: inline-block;
   width: 45px;
   height: 35px;
   font-size: 24px;
   font-weight: 400;
-  color: #006ff6;
+  color: #000000;
   cursor: pointer;
 }
 
 .number-controls button[disabled] {
-  color: #dfdfdf;
+  color: #a0a0a0;
   cursor: default;
 }
 
 .left {
-  border-top-left-radius: 22.5px;
-  border-bottom-left-radius: 22.5px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .right {
-  border-top-right-radius: 22.5px;
-  border-bottom-right-radius: 22.5px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   border-left-width: 0px;
 }
 
@@ -166,6 +191,7 @@ h1 {
 .button {
   cursor: pointer;
   border-radius: 25px;
+  background-color: rgb(250, 250, 250);
 }
 
 .button[disabled] {
@@ -174,23 +200,46 @@ h1 {
   cursor: default;
 }
 
-#guess {
-  padding: 10px 20px;
-  border: none;
-  font-weight: 400;
-  border: 1px solid #006ff6;
-}
-
-input[type=number]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+.next-round-container {
+  margin: 0 auto 30px;
 }
 
 #next-round {
   padding: 10px 20px;
   font-size: 20px;
   font-weight: 400;
-  margin: 20px auto;
-  border: 1px solid #006ff6;
+  margin: 30px auto;
+  border: 1px solid #000000;
+}
+
+#abstain {
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 20px auto 0;
+  border: 1px solid #000000;
+}
+
+#vote-button-a.button[disabled], #vote-button-b.button[disabled], #next-round.button[disabled], #abstain.button[disabled] {
+  border: 1px solid #a0a0a0;
+}
+
+#vote-button-a, #vote-button-b {
+  padding: 10px 12px;
+  border: none;
+  font-weight: 400;
+  border: 1px solid #000000;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.stat {
+  padding: 5px;
+  margin: 0;
+  width: 100%;
+  text-align: left;
 }
 
 .instructions {
@@ -208,9 +257,4 @@ input[type=number]::-webkit-inner-spin-button {
 
 .instructions h3 {
   font-size: 14px;
-}
-
-.winning-text, .winning-text[disabled] {
-  color: #000;
-  font-weight: 400;
 }
