--- a/voting/style.css
+++ b/voting/style.css
@@ -83,9 +83,10 @@ h1 {
   align-items: center;
   width: auto;
   padding: 20px;
+  margin: 10px 0 0;
   gap: 20px;
   background: rgb(237,237,237);
-  border: 1px solid rgb(127, 197, 255);
+  border: 1px solid rgb(148, 127, 255);
   border-radius: 25px;
 }
 
