--- a/voting/style.css
+++ b/voting/style.css
@@ -166,11 +166,19 @@ h1 {
 }
 
 #history-area p {
-  margin: 10px 0 0;
+  margin: 0;
   text-align: left;
 }
 
-#history-area p:nth-child(even) {
+#history-area p:nth-child(4n+1) {
+  margin: 10px 0 0;
+  text-align: left;
+  /*padding-top: 5px;
+  border-top: 1px solid rgb(148, 127, 255);*/
+  font-weight: 600;
+}
+
+#history-area p:nth-child(4n) {
   margin: 0 0 20px;
 }
 
